force-app/main/default/objects/College__c/fields/College_ID__c.field-meta.xml
<CustomField>
    <fullName>College_ID__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <externalId>true</externalId>
    <label>College ID</label>
    <type>AutoNumber</type>
</CustomField>