force-app/main/default/objects/College__c/fields/Count_Of_Students__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Students__c</fullName>
    <label>Count Of Students</label>
    <summaryForeignKey>Student__c.College__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>