force-app/main/default/objects/College__c/fields/Courses__c.field-meta.xml
<CustomField>
    <fullName>Courses__c</fullName>
    <label>Courses</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M.tech</fullName>
            </value>
            <value>
                <fullName>B.tech</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>BCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>