force-app/main/default/objects/College__c/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>Example@example.com</inlineHelpText>
    <label>Email ID</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>