force-app/main/default/objects/College__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Count_Of_Students__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>